# agentx

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CRAWL4AI_SETUP.md  Dockerfile  FIX_STREAMING_ISSUE.md  PARALLEL_EXECUTION_DESIGN.md  README.md  RELEASE.md  debug_deepseek_hang.py  debug_task.py  debug_tools.py  main.py  nixpacks.toml  pydoc-markdown.yml  pyproject.toml  temp_pydoc_config.yml  test_sse_console.py  test_sse_usage.md  test_streaming.py
.cursor/rules/: agentx.mdc  vibex.mdc
.github/workflows/: gh-pages.yml  pypi.yaml
benchmark/: .gitignore  README.md
config/: simple_agent.yaml  team.yaml
config/agents/: planner.md  researcher.md
config/prompts/: storer.md
docs/: next.config.ts  package.json  pnpm-lock.yaml  taskspace-organization.md  tsconfig.json
docs/app/: globals.css  layout.tsx  page.tsx
docs/components/: api-doc.tsx  app-button.tsx
docs/content/: _meta.js  index.mdx
docs/sphinx/: README.md  build_docs.sh  conf.py  index.rst
examples/: project_architecture_demo.py
examples/auto_writer/: .gitignore  CLAUDE.md  PLAN.md  README.md  USAGE.md  explore_github_repo.py  main.py  parallel_auto_writer.py  quick_auto_writer.py  research_-2811749718129632226.json  research_-2963605509946315450.json  research_-4994840259616994462.json  research_2118071880615551249.json  research_2536085170908279566.json  research_4611107951910217737.json  research_530416590497985977.json  research_5725240227587735502.json  research_683137718913788315.json  static_html_example.py  strict_auto_writer.py  test_append.py  test_comprehensive_writer.py  test_enhanced_system.py  test_parallel_auto_writer.py  test_search_extract.py  test_section_workflow.py  test_summarize_direct.py  tools.py
examples/extractor/: README.md  agentx_issue.md  crawl4ai_issue.md  crawl4ai_workaround_issue.md  main.py  quick_test.py  test_browser_lifecycle.py  test_crawl4ai_fixed.py  test_manual_crawler.py  test_playwright_direct.py  test_reddit.py
examples/handoff_demo/: main.py
examples/simple_chat/: README.md  main.py
examples/simple_research/: README.md  main.py
examples/simple_store/: main.py
examples/simple_team/: main.py
examples/stream_chat/: README.md  chat_cli.py  main.py
examples/super_writer/: main.py  simple_test.py  test_consultant.py  test_research_flow.py
examples/tool_chat/: deepseek_test.py  main.py  weather_tool.py
examples/wordx/: .gitignore  README.md  clear-cache.sh  main.py  pyproject.toml  quickstart.sh  wordx_setup.py
examples/wordx/addon/: README.md  config.js  debug.html  icon-test.html  manifest.xml  package.json  pnpm-lock.yaml  server.js  taskpane.html  test.html
examples/wordx/addon/assets/: README.md
examples/wordx/addon/function-file/: function-file.html
examples/wordx/addon/src/: taskpane.js
examples/wordx/backend/: config.py  environment.template  main.py  requirements.txt
examples/wordx/backend/config/: team.yaml
examples/wordx/backend/config/prompts/: compliance_auditor.md  content_editor.md  document_reviewer.md  formatter.md
scripts/: build_api_docs.sh  build_docs.sh  debug_server.py  dev.sh  generate_api_docs.py  generate_sdk_docs.py  railway-start.sh  run_server.sh  start_server.py
src/agentx/: __init__.py
src/vibex/: __init__.py  railway_start.py
studio/: .agentx-users.json  .env.example  .gitignore  AGENTX_INTEGRATION.md  README.md  middleware.ts  next.config.ts  nixpacks.toml  package.json  pnpm-lock.yaml  setup-ui.sh  tailwind.config.js  vercel.json
studio/public/: site.webmanifest
studio/scripts/: setup.js  start-backend.js  test-sse-streaming.js
tests/: README.md  __init__.py  conftest.py  run_message_parts_tests.py  run_tests.py
tests/benchmarks/: comprehensive_cache_benchmark.py  test_cache_performance.py  test_project_storage_benchmark.py
tests/cli/: test_all_apis.py  test_api.py  test_api_basic.py  test_api_sync.py  test_chat.py
tests/e2e/: test_project_workflow.py  test_xagent_e2e.py
tests/integration/: README_message_parts.md  TEST_RESULTS.md  __init__.py  test_auto_writer_load.py  test_auto_writer_research.py  test_brain_tool_integration.py  test_browser_crash_simple.py  test_cache_integration.py  test_crawl4ai_real_issues.py  test_document_workflow.py  test_file_tool_comprehensive.py  test_file_tool_integration.py  test_handoff_e2e.py  test_main_cli.py  test_message_parts.py  test_message_parts_e2e.py  test_message_parts_simple.py  test_parallel_execution.py  test_polish_document.py  test_project_storage_integration.py  test_redis_cache.py  test_research_error_handling.py  test_research_file_naming.py  test_research_simple.py  test_research_tool_crash.py  test_research_tool_fix.py  test_storage_caching.py  test_taskspace_storage_integration.py  (+4 more)
user_index/: _task_index.json  guest.json  test-user.json
web/: .env.example  .vibex-users.json  README.md  next.config.ts  nixpacks.toml  package.json  pnpm-lock.yaml  setup-ui.sh
(+933 files in other folders)
